chore: clean up code quality issues